--- a/index.html
+++ b/index.html
@@ -59,25 +59,6 @@
                 </div>
             </div>
         </div>
-        <!-- End Preloader -->
-		
-		<!-- Get Pro Button -->
-		<!-- <ul class="pro-features">
-			<a class="get-pro" href="#">Get Pro</a>
-			<li class="big-title">Pro Version Available on Themeforest</li>
-			<li class="title">Pro Version Features</li>
-			<li>2+ premade home pages</li>
-			<li>20+ html pages</li>
-			<li>Color Plate With 12+ Colors</li>
-			<li>Sticky Header / Sticky Filters</li>
-			<li>Working Contact Form With Google Map</li>
-			<div class="button">
-				<a href="http://preview.themeforest.net/item/mediplus-medical-and-doctor-html-template/full_screen_preview/26665910?_ga=2.145092285.888558928.1591971968-344530658.1588061879" target="_blank" class="btn">Pro Version Demo</a>
-				<a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
-			</div>
-		</ul>
-	 -->
-		<!-- Get Pro Button -->
 		<ul class="pro-features">
 			<a class="get-pro"style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;background:none;box-shadow:none;">
 				<img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" style="width: 48px; height: 48px; animation: pulse 1.5s infinite; background: none;">
@@ -166,15 +147,15 @@
 									
 											<li><a href="#products">Our Products <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="404.html">Disposable Medical Supplies
+													<li><a href="#">Disposable Medical Supplies
 													</a></li>
-													<li><a href="404.html">Hospital Furniture
+													<li><a href="#">Hospital Furniture
 													</a></li>
-													<li><a href="404.html">Medical Equipment
+													<li><a href="#">Medical Equipment
 													</a></li>
-													<li><a href="404.html">Diagnostic Laboratory Products
+													<li><a href="#">Diagnostic Laboratory Products
 													</a></li>
-													<li><a href="404.html">Rehabilitation Products
+													<li><a href="#">Rehabilitation Products
 													</a></li>
 												</ul>
 											</li>
@@ -244,7 +225,7 @@
 				</div>
 				<!-- Start End Slider -->
 				<!-- Start Single Slider -->
-				<div class="single-slider" style="background-image:url('img/slider3.jpg')">
+				<div class="single-slider" style="background-image:url('img/banner1.jpg')">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-7">
