--- a/product.html
+++ b/product.html
@@ -51,7 +51,12 @@
         .product-img {
             width: 100%;
             height: 250px;
-            object-fit: cover;
+            background-color: #ddd;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #777;
+            font-size: 18px;
         }
 
         .product-content {
@@ -66,25 +71,6 @@
         .product-content p {
             font-size: 14px;
             color: #555;
-        }
-
-        .read-more {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 8px 16px;
-            border-radius: 5px;
-            margin-top: 15px;
-            cursor: pointer;
-            transition: background 0.3s ease;
-        }
-
-        .read-more:hover {
-            background: #0056b3;
-        }
-
-        .hidden {
-            display: none;
         }
 
         @media (min-width: 768px) {
@@ -106,58 +92,112 @@
     <section class="products-section">
         <div class="product-grid">
 
-            <!-- Product 1 -->
             <div class="product-card">
-                <img src="img/products/ortho-trauma.jpg" alt="Ortho Trauma" class="product-img">
+                <div class="product-img">Image Placeholder</div>
                 <div class="product-content">
-                    <h3>Ortho Trauma Implants</h3>
-                    <p>High-grade orthopedic trauma solutions for surgical fixation, trusted by specialists nationwide.</p>
-                    <div class="hidden full-text">
-                        <p>Our orthopedic trauma implants include plates, screws, nails, and instruments for treating fractures. Backed by brands like Meril for assured quality and compatibility.</p>
-                    </div>
-                    <button class="read-more" onclick="toggleReadMore(this)">Read More</button>
+                    <h3>Meril Endo-Surgery</h3>
+                    <p>Advanced minimally invasive surgical tools from Meril, supporting laparoscopic, bariatric, and general surgeries.</p>
                 </div>
             </div>
 
-            <!-- Product 2 -->
             <div class="product-card">
-                <img src="img/products/joint-replacement.jpg" alt="Joint Replacement" class="product-img">
+                <div class="product-img">Image Placeholder</div>
                 <div class="product-content">
-                    <h3>Joint Replacement Systems</h3>
-                    <p>Advanced knee and hip joint solutions with precision-engineered materials for lasting durability.</p>
-                    <div class="hidden full-text">
-                        <p>We supply Meril Ortho's complete range of joint replacement systems designed to meet the evolving needs of orthopedic surgeons and patients alike.</p>
-                    </div>
-                    <button class="read-more" onclick="toggleReadMore(this)">Read More</button>
+                    <h3>Meril Diagnostics</h3>
+                    <p>Reliable diagnostic kits and lab solutions used for rapid and accurate detection across multiple diseases.</p>
                 </div>
             </div>
 
-            <!-- Product 3 -->
             <div class="product-card">
-                <img src="img/products/surgical-drapes.jpg" alt="Surgical Drapes" class="product-img">
+                <div class="product-img">Image Placeholder</div>
                 <div class="product-content">
-                    <h3>Surgical Drapes</h3>
-                    <p>Reliable sterile barriers for operating rooms, offering patient and practitioner protection.</p>
-                    <div class="hidden full-text">
-                        <p>We provide Primewear surgical drapes that ensure sterile environments during surgeries, conforming to strict infection control guidelines.</p>
-                    </div>
-                    <button class="read-more" onclick="toggleReadMore(this)">Read More</button>
+                    <h3>Nipro Syringe</h3>
+                    <p>Precision-engineered syringes known for smooth plunger action and accurate dosage delivery.</p>
                 </div>
             </div>
 
-            <!-- More product cards can be added here similarly -->
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>B Braun</h3>
+                    <p>Comprehensive range of IV cannulas, infusion systems, and wound care products from a trusted global brand.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Hitech Syringe</h3>
+                    <p>Disposable syringes and infusion sets made under stringent quality controls for hospital use.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Vygon</h3>
+                    <p>Specialized medical and surgical solutions including catheters and vascular access devices.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>3M India Ltd.</h3>
+                    <p>Medical-grade adhesive solutions, surgical drapes, and infection prevention products from 3M.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Smith & Nephew</h3>
+                    <p>Leading supplier of advanced wound management and orthopedic care solutions.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Polymed</h3>
+                    <p>Disposable medical devices for infusion therapy, anesthesia, and urology.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Celon Labs</h3>
+                    <p>Manufacturers of oncology and critical care pharmaceutical formulations.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Neon & Mill Laboratories</h3>
+                    <p>Trusted names in injectables, tablets, and IV fluids, frequently used in diagnostics and general medicine.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Nulife & Ansell Gloves</h3>
+                    <p>Protective latex and nitrile gloves for surgical, examination, and industrial use.</p>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-img">Image Placeholder</div>
+                <div class="product-content">
+                    <h3>Siddharth Cotton</h3>
+                    <p>Premium surgical cotton rolls and gauze products for hospitals and clinics.</p>
+                </div>
+            </div>
 
         </div>
     </section>
 
-    <script>
-        function toggleReadMore(button) {
-            const content = button.previousElementSibling;
-            content.classList.toggle('hidden');
-            button.textContent = content.classList.contains('hidden') ? 'Read More' : 'Read Less';
-        }
-    </script>
-
 </body>
 </html>
-
